attempting to fix issue where cells stretch when minimizing screen

--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,11 @@
-* {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-}
-
 header {
-    font-size: 3vmin;
+    font-size: 2vmin;
     text-align: center;
-    margin-top: 2em;
+    margin-top: 3em;
     margin-bottom: 2em;
+    font-family: 'Cutive Mono', monospace;
+    letter-spacing: -.5px;
+    text-transform: uppercase;
 }
 
 body {
@@ -20,20 +17,26 @@ body {
 }
 
 .columns {
+    min-width: 450px;
     display: flex;
 }
 
 #gameboard {
     border-collapse: collapse;
     cursor: pointer;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold
 }
 
 #gameboard td[contenteditable="true"] {
     border: .5px solid black;
-    width: 32px;
-    height: 32px;
+    width: 30px;
+    height: 30px;
     text-align: center;
-    font-size: 16px;
+    font-size: 18px;
+    min-width: 30px;
+    min-height: 30px;
+    
 }
 
 #gameboard td[contenteditable="true"]:focus {
@@ -44,17 +47,21 @@ body {
 #acrosswords,
 #downwords {
     flex: 1;
-    margin-top: 10em;
+    margin-top: 9em;
+    font-family: 'Cutive Mono', monospace;
+    word-spacing: -1px;
+    letter-spacing: .5px;
+    line-height: 22px;
 }
 
 #downwords {
     padding-right: 25px;
-    margin-left: 30px;
+    margin-left: 35px;
 }
 
 #acrosswords {
     padding-left: 25px;
-    margin-right: 30px;
+    margin-right: 35px;
 }
 
 #clearButton {
@@ -62,3 +69,7 @@ body {
     margin-bottom: 30px;
     padding: 3px;
 }
+
+
+
+
